--- a/PageCollectionView/Base.lproj/Main.storyboard
+++ b/PageCollectionView/Base.lproj/Main.storyboard
@@ -10,16 +10,11 @@
         <scene sceneID="Y5G-If-mVR">
             <objects>
                 <collectionViewController id="S3r-8W-jTZ" customClass="MMPageCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ZzY-ki-h6H" customClass="MMPageCollectionView">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="ZzY-ki-h6H" customClass="MMPageCollectionView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lUB-id-1QZ" customClass="MMShelfLayout">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
+                        <collectionViewLayout key="collectionViewLayout" id="0IB-6u-Gz9" customClass="MMShelfLayout"/>
                         <cells/>
                         <connections>
                             <outlet property="dataSource" destination="S3r-8W-jTZ" id="htW-fb-iOq"/>
