--- a/PageCollectionViewSample/Base.lproj/Main.storyboard
+++ b/PageCollectionViewSample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S3r-8W-jTZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YES-Q1-rW3">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -7,24 +7,24 @@
     </dependencies>
     <scenes>
         <!--Page Collection View Controller-->
-        <scene sceneID="Y5G-If-mVR">
+        <scene sceneID="y6e-os-JPc">
             <objects>
-                <collectionViewController id="S3r-8W-jTZ" customClass="MMPageCollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="ZzY-ki-h6H" customClass="MMPageCollectionView">
+                <collectionViewController id="YES-Q1-rW3" customClass="MMPageCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="eVd-yx-nhY" customClass="MMPageCollectionView">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewLayout key="collectionViewLayout" id="0IB-6u-Gz9" customClass="MMShelfLayout"/>
+                        <collectionViewLayout key="collectionViewLayout" id="JXt-MZ-3Qf" customClass="MMShelfLayout"/>
                         <cells/>
                         <connections>
-                            <outlet property="dataSource" destination="S3r-8W-jTZ" id="htW-fb-iOq"/>
-                            <outlet property="delegate" destination="S3r-8W-jTZ" id="988-IF-ht5"/>
+                            <outlet property="dataSource" destination="YES-Q1-rW3" id="vXC-Ts-41J"/>
+                            <outlet property="delegate" destination="YES-Q1-rW3" id="3pi-XI-Vwn"/>
                         </connections>
                     </collectionView>
                 </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CLQ-rm-gdG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BzH-CQ-GXz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136" y="110"/>
+            <point key="canvasLocation" x="136" y="112"/>
         </scene>
     </scenes>
 </document>
